--- a/config/tasks.yml
+++ b/config/tasks.yml
@@ -1,5 +1,5 @@
 googleFeatures:
- feature_order: ['features/google_search.feature']
+ feature_order: ['features/findGameSparks.feature']
  runtime_defaults:
   controller: 'chrome'
  defaults: ['--format pretty', '-P -s']
