Cucumber set up
- Create Clavis home fixture page
- Open the clavis login page

--- a/config/tasks.yml
+++ b/config/tasks.yml
@@ -1,5 +1,5 @@
 googleFeatures:
- feature_order: ['features/findGameSparks.feature']
+ feature_order: ['features/find_game_sparks.feature']
  runtime_defaults:
   controller: 'chrome'
  defaults: ['--format pretty', '-P -s']
