--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -4,7 +4,7 @@ rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'pr
 std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} --strict --tags ~@wip --tags ~@slow --tags ~@broken -r features"
 %>
 default: <%= std_opts %> features
-all: --format progress --tags ~@broken features
+all: <%= std_opts %> --format progress --tags ~@broken features
 l1: <%= std_opts %> --format html -out reports/l1.html --tags @l1
 l2: <%= std_opts %> --format html -out reports/l2.html --tags @l2
 slow: --format pretty --strict --tags @slow features
