--- a/config/config.yml
+++ b/config/config.yml
@@ -1,7 +1,23 @@
 URL: http://all-ei-dev.elasticbeanstalk.com/
+
 METADATA_URL: http://localhost:5000
 METADATA_USERNAME: ecommerceapp@clavistechnology.com
 METADATA_PASSWORD: rc223svt
+
 CONTROLLER: chrome
 BS_USERNAME: david1347
 BS_AUTHKEY: ntnBqvSYwxip1XQUnPM7
+
+USERS:
+  KCC US:
+    username: kcc_us@clavistechnology.com
+    password: Testing!700
+  GENERAL MILLS US:
+    username: general_mills_us@clavistechnology.com
+    password: Testing!800
+  KCC US TEST:
+    username: kcc_us_test2@clavisinsight.com
+    password: Testing!700
+  KCC US TEST 2:
+    username: kcc_us_test2@clavisinsight.com
+    password: Testing!700
