--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
-#URL: http://localhost:3000
-URL: http://all-ei-dev.elasticbeanstalk.com/
+URL: http://localhost:3000
+#URL: http://all-ei-dev.elasticbeanstalk.com/
 
 METADATA_URL: http://localhost:5000
 METADATA_USERNAME: ecommerceapp@clavistechnology.com
