EUI-1366 Improve performance when the user logging in
- Fix a problem with the record_video flag setting up

--- a/config/config.yml
+++ b/config/config.yml
@@ -7,7 +7,7 @@ METADATA_PASSWORD: <%= ENV['METADATA_PASSWORD'] || 'rc223svt' %>
 CONTROLLER: <%= ENV['CONTROLLER'] || 'chrome' %>
 BS_USERNAME: <%= ENV['BS_USERNAME'] || 'david1347' %>
 BS_AUTHKEY: <%= ENV['BS_AUTHKEY'] || 'ntnBqvSYwxip1XQUnPM7' %>
-RECORD_VIDEO?: <%= ENV['RECORD_VIDEO'] == 'true' >
+RECORD_VIDEO?: <%= ENV['RECORD_VIDEO'] == 'true' %>
 
 USERS:
   KCC US:
